kubernetes/undeployed/monitoring/prometheus.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: prometheus
  namespace: prometheus
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "grafana.vpn.rjst.de"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        credentialName: prometheus-cert
        mode: SIMPLE
      hosts:
        - "grafana.vpn.rjst.de"

---

apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: prometheus
  namespace: prometheus
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  hosts:
    - "grafana.vpn.rjst.de"
  gateways:
    - prometheus
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: grafana
            port:
              number: 80
